--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.2/css/all.min.css" />
 </head>
 
-<body class="flex flex-col justify-between items-center w-full min-h-screen px-4 py-6 bg-black">
+<body class="flex flex-col justify-between items-center w-full min-h-screen px-4 py-6 bg-black gap-5">
     <main id="main-content" role="main" class="flex-1 w-full flex flex-col justify-center items-center gap-10">
         <!-- App Header -->
         <header id="app-header" class="w-full max-w-[570px]" role="banner">
